package edu.masanz.da.pk3.sprite.interfaces;

public interface IIsDisposable {
    boolean isDisposable();
}
